# L04-team/routes/index.js
@@ -7,7 +7,7 @@ routes.use(
   '/',
   (docData = (req, res) => {
     let docData = {
-      documentationURL: 'https://nathanbirch.github.io/nathan-byui-api-docs',
+      documentationURL: 'https://nathanbirch.github.io/nathan-byui-api-docs'
     };
     res.send(docData);
   })
